[gd_scene load_steps=9 format=3 uid="uid://dxpfxnf3vdlj5"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_d453e"]

[sub_resource type="Gradient" id="Gradient_x2q5p"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.8, 0.3, 1, 1, 0.5, 0.7, 1, 0.8, 0.3, 0.5, 1, 0)

[sub_resource type="Gradient" id="Gradient_jdgth"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 0.3, 0.8, 1, 0.7, 0.5, 1, 0.8, 0.4, 0.2, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_24n3w"]
font_size = 85
font_color = Color(0.901961, 0.65098, 1, 1)
outline_size = 15
outline_color = Color(0.392157, 0.0862745, 0.701961, 1)
shadow_size = 15
shadow_color = Color(0.258824, 0, 0.580392, 0.505882)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trgny"]
bg_color = Color(0.576471, 0.317647, 0.996078, 0.741176)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.909804, 0.662745, 1, 0.694118)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.172549, 0.0666667, 0.678431, 0.517647)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wn6me"]
bg_color = Color(0.321569, 0.160784, 0.796078, 0.913725)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.627451, 0.313726, 1, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_color = Color(0.172549, 0.0666667, 0.678431, 0.878431)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l45iv"]
bg_color = Color(0.239216, 0.156863, 0.517647, 0.556863)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.909804, 0.662745, 1, 0.388235)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0.133333, 0.0666667, 0.423529, 0.545098)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmu0h"]
bg_color = Color(0.12549, 0.0705882, 0.2, 0.843137)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.521569, 0.337255, 0.827451, 0.552941)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.317647)
shadow_size = 8

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_d453e")

[node name="Backdrop" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.0509804, 0.145098, 0.827451)

[node name="BackgroundFrame" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.027451, 0.117647, 0.843137)

[node name="BorderTop" type="ColorRect" parent="BackgroundFrame"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 4.0
grow_horizontal = 2
color = Color(0.666667, 0.407843, 1, 0.784314)

[node name="BorderBottom" type="ColorRect" parent="BackgroundFrame"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.666667, 0.407843, 1, 0.784314)

[node name="BorderLeft" type="ColorRect" parent="BackgroundFrame"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 4.0
grow_vertical = 2
color = Color(0.666667, 0.407843, 1, 0.784314)

[node name="BorderRight" type="ColorRect" parent="BackgroundFrame"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.666667, 0.407843, 1, 0.784314)

[node name="BackgroundEffects" type="Node2D" parent="."]

[node name="ParticlesContainer" type="Node2D" parent="."]

[node name="StarburstParticles" type="CPUParticles2D" parent="ParticlesContainer"]
position = Vector2(576, 324)
amount = 50
lifetime = 5.0
preprocess = 2.0
speed_scale = 0.5
explosiveness = 0.1
randomness = 0.2
lifetime_randomness = 0.2
emission_shape = 3
emission_rect_extents = Vector2(600, 350)
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
scale_amount_min = 5.0
scale_amount_max = 15.0
color_ramp = SubResource("Gradient_x2q5p")

[node name="GlowParticles" type="CPUParticles2D" parent="ParticlesContainer"]
position = Vector2(576, 324)
amount = 30
lifetime = 4.0
preprocess = 2.0
speed_scale = 0.7
explosiveness = 0.1
randomness = 0.2
lifetime_randomness = 0.2
emission_shape = 3
emission_rect_extents = Vector2(600, 350)
direction = Vector2(0, -1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
angular_velocity_min = -20.0
angular_velocity_max = 20.0
scale_amount_min = 5.0
scale_amount_max = 12.0
color_ramp = SubResource("Gradient_jdgth")

[node name="PausePanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rmu0h")

[node name="PauseTitle" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_top = 100.0
offset_right = 234.0
offset_bottom = 217.0
grow_horizontal = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_24n3w")
horizontal_alignment = 1

[node name="TitleGlow" type="CPUParticles2D" parent="PauseTitle"]
position = Vector2(234, 60)
amount = 50
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(234, 40)
gravity = Vector2(0, -20)
scale_amount_min = 3.0
scale_amount_max = 8.0
color = Color(0.835294, 0.466667, 1, 0.427451)

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 30.0
offset_right = 200.0
offset_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="ResumeButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.996078, 0.847059, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.996078, 0.847059, 1, 1)
theme_override_colors/font_pressed_color = Color(0.996078, 0.847059, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_l45iv")
theme_override_styles/hover = SubResource("StyleBoxFlat_trgny")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wn6me")
text = "RESUME"

[node name="ButtonGlow" type="CPUParticles2D" parent="MenuContainer/ResumeButton"]
position = Vector2(200, 30)
amount = 20
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(200, 30)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.701961, 0.345098, 1, 0.294118)

[node name="OptionsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.996078, 0.847059, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.996078, 0.847059, 1, 1)
theme_override_colors/font_pressed_color = Color(0.996078, 0.847059, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_l45iv")
theme_override_styles/hover = SubResource("StyleBoxFlat_trgny")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wn6me")
text = "OPTIONS"

[node name="ButtonGlow" type="CPUParticles2D" parent="MenuContainer/OptionsButton"]
position = Vector2(200, 30)
amount = 20
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(200, 30)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.701961, 0.345098, 1, 0.294118)

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0.996078, 0.847059, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.996078, 0.847059, 1, 1)
theme_override_colors/font_pressed_color = Color(0.996078, 0.847059, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_l45iv")
theme_override_styles/hover = SubResource("StyleBoxFlat_trgny")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wn6me")
text = "QUIT"

[node name="ButtonGlow" type="CPUParticles2D" parent="MenuContainer/QuitButton"]
position = Vector2(200, 30)
amount = 20
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(200, 30)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.701961, 0.345098, 1, 0.294118) 